# Multirobot-2d-simulator25

./: .gitignore  README.md  run.sh
catkin_ws/src/exercise/: CMakeLists.txt  package.xml  setup_exercise_structure.sh
catkin_ws/src/exercise/config/: cappero_1r.json  multirobot_test.json  rviz_config.rviz  rviz_config_laser.rviz
catkin_ws/src/exercise/include/multirobot_simulator/: config_parser.h  lidar.h  lidar_ros.h  robot.h  robot_ros.h  types.h  world.h
catkin_ws/src/exercise/launch/: simulator.launch
catkin_ws/src/exercise/src/: config_parser.cpp  lidar.cpp  lidar_ros.cpp  main.cpp  robot.cpp  robot_ros.cpp  world.cpp
test_data/: multirobot.json
tmp/: comandi_monitoring.txt
