<?xml version="1.0"?>
<package format="2">
  <name>multirobot_simulator</name>
  <version>1.0.0</version>
  <description>Multi-Robot 2D Simulator with ROS support</description>

  <maintainer email="2054849.caterino@studenti.uniroma1.it">Nicolò Caterino</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <!-- ROS core dependencies -->
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  
  <!-- External libraries -->
  <build_depend>jsoncpp</build_depend>
  <build_depend>libopencv-dev</build_depend>
  <build_depend>libeigen3-dev</build_depend>
  
  <!-- Runtime dependencies -->
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>jsoncpp</exec_depend>
  <exec_depend>libopencv-dev</exec_depend>

  <export>
    <build_type>catkin</build_type>
  </export>
</package>
